# pypi-mirror

./: .gitignore  .gitreview  .mailmap  CONTRIBUTING.md  CONTRIBUTING.rst  MANIFEST.in  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
gerritx/: version.py
gerritx/cmd/: fetch_remotes.py  manage_projects.py  run_mirror.py  trivial_rebase.py  update_blueprint.py  update_bug.py
jeepyb/: gerritdb.py  projects.py  version.py
jeepyb/cmd/: close_pull_requests.py  create_cgitrepos.py  expire_old_reviews.py  fetch_remotes.py  manage_projects.py  notify_impact.py  openstackwatch.py  process_cache.py  run_mirror.py  trivial_rebase.py  update_blueprint.py  update_bug.py
jeepyb/config/: openstackwatch.ini-sample
pypi_mirror/cmd/: __init__.py  run_mirror.py
tools/: pip-requires  test-requires
