[metadata]
name = jeepyb
summary = Tools for managing gerrit projects and external sources.
description-file =
    README.rst
author = OpenStack Infrastructure Team
author-email = openstack-infra@lists.openstack.org
home-page = http://ci.openstack.org/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    close-pull-requests = jeepyb.cmd.close_pull_requests:main
    create-cgitrepos = jeepyb.cmd.create_cgitrepos:main
    expire-old-reviews = jeepyb.cmd.expire_old_reviews:main
    fetch-remotes = jeepyb.cmd.fetch_remotes:main
    manage-projects = jeepyb.cmd.manage_projects:main
    notify-impact = jeepyb.cmd.notify_impact:main
    openstackwatch = jeepyb.cmd.openstackwatch:main
    process-cache = jeepyb.cmd.process_cache:main
    run-mirror = jeepyb.cmd.run_mirror:main
    trivial-rebase = jeepyb.cmd.trivial_rebase:main
    update-blueprint = jeepyb.cmd.update_blueprint:main
    update-bug = jeepyb.cmd.update_bug:main
